# pokebot

./: .gitignore  README.md  pyproject.toml  random_battle.json  setup.cfg  test.json  test_battle.json
docs/: pokebot.emmx
examples/: ex003_lethal.py  ex012_save_team.py  ex013_run_bot.py  ex01_random_1on1.py  ex02_random_NfromM.py  ex03_lethal.py  ex04_statistics.py  ex12_save_team.py  ex13_run_bot.py  team.json
examples/sv/: ex001_random_1on1.py  ex002_random_NfromM.py  ex003_lethal.py  ex004_view_data.py  ex005_janken.py  ex011_connect_nxbt.py  ex012_save_team.py
src/backup/common/: enums.py  types.py
src/backup/core/: active_pokemon_manager.py  battle.py  damage_manager.py  field_manager.py  turn_manager.py
src/backup/data/: item.json
src/backup/logger/: damage_log.py  logger.py  turn_log.py
src/backup/player/: __init__.py  bot.py  (+3 more)
src/jpoke/: __init__.py  config.py
src/pokebot/: __init__.py
src/pokebot_backup/: __init__.py
tests/: ability.py  check_copy.py  deepcopy.py  move.py  on_check_trapped.py  on_damage.py  on_hit.py  on_modify_stat.py  on_switch_in.py  on_turn_end.py  other_abilities.py  random_1on1.py  random_battle.json  random_battle.py  speed_order.py  team.json  test.py  test_pokemon.py
tests/ability/: あくしゅう.py  あとだし.py  あまのじゃく.py  あめうけざら.py  あめふらし.py  ありじごく.py  いかく.py  いかりのこうら.py  いかりのつぼ.py  いしあたま.py  いたずらごころ.py  うるおいボディ.py  えんかく.py  おうごんのからだ.py  おもかげやどし.py  かいりきバサミ.py  かがくへんかガス.py  かぜのり.py  かぜのり_1.py  かぜのり_2.py  かそく.py  かちき.py  かるわざ.py  かんそうはだ.py  かんろなミツ.py  がんじょう.py  がんじょう_1.py  がんじょう_2.py  きもったま.py  きゅうばん.py  きょううん.py  きよめのしお_1.py  きよめのしお_2.py  きんしのちから.py  きんちょうかん.py  ぎゃくじょう.py  くいしんぼう.py  くだけるよろい.py  こぼれダネ.py  こんがりボディ.py  (+131 more)
tests/move/: U_turn.py  anti_protect.py  bind.py  charge.py  charge_1.py  critical.py  first_turn.py  high_critical.py  ibiki.py  ignore_ability.py  ignore_rank.py  immovable.py  negoto.py  non_encore.py  non_negoto.py  one_ko.py  physical.py  powder.py  protect.py  rage.py  rainy_hit.py  skip_charge.py  solar.py  unrepeatable.py  wall_break.py  いかりのまえば.py  いのちがけ_1.py  いのちがけ_2.py  いびき.py  うたかたのアリア.py  うちおとす.py  かげぬい.py  がむしゃら_1.py  がむしゃら_2.py  がんせきアックス.py  きつけ.py  くらいつく.py  こうそくスピン.py  しおづけ.py  じごくづき.py  (+24 more)
tests/sv/: latency_meas.py  random_battle.py
tests/tmp/: create_ability_json.py  create_item_json.py  create_move_json.py
(+412 files in other folders)
