[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokejpy"
version = "0.1.0"
description = "A Python library for handling Pokemon data"
authors = [{ name = "Your Name", email = "your_email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
