[project]
name = "your_project_name"
version = "0.1.0"
description = "A Japansese python package for Pokemon battle simulation / bot developent"
authors = [
    { name = "Tomoo Mari", email = "tmtm.holmes@email.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "unicodedata",
]

[project.urls]
Homepage = "https://github.com/tmwork1/pokebot"
Repository = "https://github.com/tmwork1/pokebot"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"