[project]
name = "jpoke"
version = "0.0.1"
description = "A Japansese python package for Pokemon battle simulation / bot developent"
authors = [
    { name = "Tomoo Mari", email = "tmtm.holmes@email.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/tmwork1/jpoke"
Repository = "https://github.com/tmwork1/jpoke"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"