[metadata]
name = pokejpy
version = 0.1.0
description = Pokemon battle simulator + real game controller
author = tmwork1
author_email = tmtm.holmes@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True

python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
pokejpy = resources/**/*, Tesseract-OCR/**/*  # `src/pokejpy/resources/` 以下のファイルを含める

[build_sphinx]
source-dir = docs/
build-dir = docs/_build

[bdist_wheel]
universal = 1